--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
+    "alt": "^0.17.1",
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
     "express": "^4.12.3",
     "react": "^0.13.3",
-    "react-router": "^0.13.3",
+    "react-router": "^1.0.0-beta3",
     "webpack": "^1.9.6"
   }
 }
