--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
   },
   "homepage": "https://github.com/pheuter/essential-react",
   "devDependencies": {
+    "babel-core": "^5.4.7",
+    "babel-loader": "^5.1.3",
     "coveralls": "^2.11.2",
+    "css-loader": "^0.14.4",
+    "file-loader": "^0.8.4",
     "istanbul": "^0.3.7",
     "istanbul-instrumenter-loader": "^0.1.2",
     "karma": "^0.12.31",
@@ -42,15 +46,17 @@
     "karma-webpack": "^1.5.0",
     "phantomjs": "^1.9.16",
     "react-hot-loader": "^1.2.3",
+    "sass-loader": "^1.0.2",
+    "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.9.6",
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
     "alt": "^0.17.1",
-    "babel-core": "^5.4.7",
-    "babel-loader": "^5.1.3",
+    "amazeui-react": "^1.0.0-beta1",
     "express": "^4.12.3",
     "react": "^0.13.3",
-    "react-router": "^1.0.0-beta3",
-    "webpack": "^1.9.6"
+    "react-router": "^1.0.0-beta3"
   }
 }
